Closed Bug 1087307 Opened 10 years ago Closed 10 years ago

Fix some more bad implicit constructors in js

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

Attached patch Patch (v1)Splinter Review
      No description provided.
Attachment #8509444 - Flags: review?(jwalden+bmo)
Comment on attachment 8509444 [details] [diff] [review]
Patch (v1)

Review of attachment 8509444 [details] [diff] [review]:
-----------------------------------------------------------------

Sure, but you might do better actually tracking down who introduced these, and making them review them.  Engage the cluestick!
Attachment #8509444 - Flags: review?(jwalden+bmo) → review+
(In reply to Jeff Walden [:Waldo] (remove +bmo to email) from comment #1)
> Comment on attachment 8509444 [details] [diff] [review]
> Patch (v1)
> 
> Review of attachment 8509444 [details] [diff] [review]:
> -----------------------------------------------------------------
> 
> Sure, but you might do better actually tracking down who introduced these,
> and making them review them.  Engage the cluestick!

Heh, ok, CCing those people.
https://hg.mozilla.org/mozilla-central/rev/c275c8e2fe0a
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: