Bug 1087307 - Fix some more bad implicit constructors in js; r=Waldo